implement spammer groups
